# get-papers-list

./: README.md  pyproject.toml  results.csv
src/get_papers_list/: main.py  parser.py  pubmed_client.py  utils.py
